Enhanced JAXB support.